--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   otp_timer_button: ^1.1.1
   flutter_osm_plugin: ^0.70.4
+  flutter_timer_countdown: ^1.0.7
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
